[package]
name = "groupy"
version = "0.3.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Elliptic curve group traits and utilities"
documentation = "https://docs.rs/groupy/"
homepage = "https://github.com/filecoin-project/group"
repository = "https://github.com/filecoin-project/group"
edition = "2018"

[dependencies]
ff = { git = "https://github.com/nilfoundation/ff.git", branch = "1-montgomery-multiplication", package = "fff" }
rand = "0.7"
rand_xorshift = "0.2"
thiserror = "1.0.10"

[badges]
maintenance = { status = "actively-developed" }
